# calli-cli

./: pyproject.toml
src/calli_cli/: __init__.py  main.py  print.py  render.py
